# cargo-alloc-profile

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  PROJECT.md  README.md  ROADMAP.md  USAGE.md
.github/workflows/: ci.yml
examples/: before_after.rs  demo.rs  simple.rs  strings.rs  vec_growth.rs
src/: allocator.rs  lib.rs  main.rs  profiler.rs  reporter.rs
tests/: integration.rs
