[package]
    authors     = ["Eric Evans <ciresnave@gmail.com>"]
    categories  = ["development-tools", "profiling"]
    description = "A cargo subcommand for profiling heap allocations in Rust programs"
    edition     = "2024"
    keywords    = ["allocations", "cargo", "heap", "memory", "profiling"]
    license     = "MIT OR Apache-2.0"
    name        = "cargo-alloc-profile"
    readme      = "README.md"
    repository  = "https://github.com/ciresnave/cargo-alloc-profile"
    version     = "0.1.0"

[[bin]]
    name = "cargo-alloc-profile"
    path = "src/main.rs"

[dependencies]
    backtrace   = "0.3"
    clap        = { version = "4.5", features = ["cargo", "derive"] }
    colored     = "2.1"
    once_cell   = "1.19"
    parking_lot = "0.12"
    serde       = { version = "1.0", features = ["derive"] }
    serde_json  = "1.0"

[dev-dependencies]
    tempfile = "3.10"

[profile.release]
    codegen-units = 1
    lto           = true
    opt-level     = 3
